[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"


dependencies = [
    "rasa==3.6.20",
    "rasa-sdk==3.6.2",
    "aiohttp==3.9.5",
    "fire==0.2.0",
    "coloredlogs>=10.0.0,<16.0.0",
    "python-socketio>=5.11.4,<6.0.0",
    "websockets>=10.4,<11.0.0",
    "questionary>=1.10.0,<1.11.0"
]
